[gd_scene load_steps=4 format=1]

[ext_resource path="res://elementos/objetos/Laser.gd" type="Script" id=1]
[ext_resource path="res://gfx/naves.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 4.0
height = 19.1351

[node name="Laser" type="Area2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1.85321, 0, 0.150001 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
equipo = 0
tipo = 0

[node name="SpriteS" type="Sprite" parent="."]

visibility/visible = false
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 820, 11, 8, 52 )

[node name="SpriteM" type="Sprite" parent="."]

visibility/visible = false
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 831, 11, 9, 52 )

[node name="SpriteL" type="Sprite" parent="."]

visibility/visible = false
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 805, 11, 11, 52 )

[node name="Collision" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 0.150001 )
transform/scale = Vector2( 1, 1.85321 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="." to="." method="_on_Laser_body_enter"]


